@@ -139,7 +139,7 @@ endif
 # =============================================================================
 # Library targets.
 # =============================================================================
-
+OBJS=		$(OBJDIR)/../*/*.$(OBJEXT)
 BEFOREBUILD=	beforebuild
 AFTERBUILD=	afterbuild
 
@@ -166,7 +166,7 @@ afterbuild:
 # -----------------------------------------------
 # Construct the static version of the libraries.
 # -----------------------------------------------
-$(LIBDIR)/$(JCCL_LIB_STATIC) $(LIBDIR)/$(JCCL_PROF_LIB_STATIC): $(OBJDIR)/../*/*.$(OBJEXT)
+$(LIBDIR)/$(JCCL_LIB_STATIC) $(LIBDIR)/$(JCCL_PROF_LIB_STATIC): $(OBJS)
 	@echo BUILDDIR_BASE=$(BUILDDIR_BASE)
 	@echo BUILDDIR=$(BUILDDIR)
 	@echo BASE_OBJDIR=$(BASE_OBJDIR)
@@ -175,7 +175,7 @@ $(LIBDIR)/$(JCCL_LIB_STATIC) $(LIBDIR)/$(JCCL_PROF_LIB_STATIC): $(OBJDIR)/../*/*
 	@echo "Creating $@"
 	@echo "------------------------------------------------"
 	@$(SHELL) $(MKINSTALLDIRS) $(LIBDIR)
-	$(AR) $(AR_NAME_FLAG)$@ $(OBJDIR)/../*/*.$(OBJEXT)
+	$(AR) $(AR_NAME_FLAG)$@ $(OBJS)
 	$(RANLIB) $@
 	cd $(LIBDIR_BASE) && $(RM_LN) $(notdir $@) && $(LN_S) $@ ./
 	@echo "------------------------------------------------"
@@ -185,21 +185,27 @@ $(LIBDIR)/$(JCCL_LIB_STATIC) $(LIBDIR)/$(JCCL_PROF_LIB_STATIC): $(OBJDIR)/../*/*
 # ------------------------------------------------
 # Construct the dynamic version of the libraries.
 # ------------------------------------------------
-$(LIBDIR)/$(JCCL_LIB_DYNAMIC): $(OBJDIR)/../*/*.$(OBJEXT)
+$(LIBDIR)/$(JCCL_LIB_DYNAMIC): $(OBJS)
 	@echo "------------------------------------------------"
 	@echo "Creating $@"
 	@echo "------------------------------------------------"
 	@$(SHELL) $(MKINSTALLDIRS) $(LIBDIR)
 ifeq (@PLATFORM@, Darwin)
-	ld -dynamic -m -r -d -bind_at_load -o $(subst .dylib,.lo,$@)	\
-          $(OBJDIR)/../*/*.$(OBJEXT)
+ifeq ($(ISA), universal)
+	for a in $(UNIVERSAL_ARCH_LIST) ; do				\
+            ld -arch $$a -dynamic -m -r -d -bind_at_load -o		\
+              $(subst .dylib,-$$a.lo,$@) $(OBJS) ;			\
+         done
+	lipo -create $(foreach arch,$(UNIVERSAL_ARCH_LIST),$(subst .dylib,-$(arch).lo,$@)) -output $(subst .dylib,.lo,$@)
+else
+	ld -dynamic -m -r -d -bind_at_load -o $(subst .dylib,.lo,$@) $(OBJS)
+endif
 	$(CXX) $(EXTRA_LDOPTS) -Wl,-dynamic -nostartfiles -Wl,-dylib	\
           -Wl,-ldylib1.o $(LDOPTS) -o $@ $(subst .dylib,.lo,$@)		\
           $(DYLIB_DEPS_JCCL)
-	rm -f $(subst .dylib,.lo,$@)
+	rm -f $(@D)/*.lo
 else
-	$(CXX_DLL) $(LDOPTS) $(DYLIB_NAME_FLAG)				\
-          $(OBJDIR)/../*/*.$(OBJEXT) $(DYLIB_DEPS_JCCL)
+	$(CXX_DLL) $(LDOPTS) $(DYLIB_NAME_FLAG) $(OBJS) $(DYLIB_DEPS_JCCL)
 endif
 ifeq (@OS_TYPE@, Win32)
 	cd $(LIBDIR_BASE) && cp $(LIBDIR)/* .
@@ -220,21 +226,27 @@ endif
 # ---------------------------------------------------------
 # Construct the profiled dynamic version of the libraries.
 # ---------------------------------------------------------
-$(LIBDIR)/$(JCCL_PROF_LIB_DYNAMIC): $(OBJDIR)/../*/*.$(OBJEXT)
+$(LIBDIR)/$(JCCL_PROF_LIB_DYNAMIC): $(OBJS)
 	@echo "------------------------------------------------"
 	@echo "Creating $@"
 	@echo "------------------------------------------------"
 	@$(SHELL) $(MKINSTALLDIRS) $(LIBDIR)
 ifeq (@PLATFORM@, Darwin)
-	ld -dynamic -m -r -d -bind_at_load -o $(subst .dylib,.lo,$@)	\
-          $(OBJDIR)/../*/*.$(OBJEXT)
+ifeq ($(ISA), universal)
+	for a in $(UNIVERSAL_ARCH_LIST) ; do				\
+            ld -arch $$a -dynamic -m -r -d -bind_at_load -o		\
+              $(subst .dylib,-$$a.lo,$@) $(OBJS) ;			\
+         done
+	lipo -create $(foreach arch,$(UNIVERSAL_ARCH_LIST),$(subst .dylib,-$(arch).lo,$@)) -output $(subst .dylib,.lo,$@)
+else
+	ld -dynamic -m -r -d -bind_at_load -o $(subst .dylib,.lo,$@) $(OBJS)
+endif
 	$(CXX) $(EXTRA_LDOPTS) -Wl,-dynamic -nostartfiles -Wl,-dylib	\
           -Wl,-ldylib1.o $(LDOPTS) -o $@ $(subst .dylib,.lo,$@)		\
           $(DYLIB_PROF_DEPS_JCCL)
-	rm -f $(subst .dylib,.lo,$@)
+	rm -f $(@D)/*.lo
 else
-	$(CXX_DLL) $(LDOPTS) $(DYLIB_NAME_FLAG)				\
-          $(OBJDIR)/../*/*.$(OBJEXT) $(DYLIB_PROF_DEPS_JCCL)
+	$(CXX_DLL) $(LDOPTS) $(DYLIB_NAME_FLAG) $(OBJS) $(DYLIB_PROF_DEPS_JCCL)
 endif
 ifeq (@OS_TYPE@, Win32)
 	cd $(LIBDIR_BASE) && cp $(LIBDIR)/* .
